--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <button id="clear-btn" class="clear-btn">Clear All</button>
     
 </div>
-<ul class="task-box">
+<ul class="task-box" id="task-box">
     <li class="task">
         <label for="1">
             <input type="checkbox" id="1">
@@ -37,6 +37,10 @@
         </label>
         <div class="settings">
             <i class="uil uil-ellipsis-h"></i>
+            <ul class="task-menu">
+                <li><i class="uil uil-pen"></i>Edit</li>
+                <li><i class="uil uil-trash"></i>Delete</li>
+            </ul>
         </div>
     </li>
     <li class="task">
@@ -46,6 +50,10 @@
         </label>
         <div class="settings">
             <i class="uil uil-ellipsis-h"></i>
+            <ul class="task-menu">
+                <li><i class="uil uil-pen"></i>Edit</li>
+                <li><i class="uil uil-trash"></i>Delete</li>
+            </ul>
         </div>
     </li>
     <li class="task">
@@ -55,6 +63,10 @@
         </label>
         <div class="settings">
             <i class="uil uil-ellipsis-h"></i>
+            <ul class="task-menu">
+                <li><i class="uil uil-pen"></i>Edit</li>
+                <li><i class="uil uil-trash"></i>Delete</li>
+            </ul>
         </div>
     </li>
 </ul>
