--- a/completed.html
+++ b/completed.html
@@ -21,9 +21,9 @@
     <div class="controls">
     <div class="categories">
         <ul>
-            <li class="active"><a href='#'>All</a></li>
+            <li><a href='./index.html'>All</a></li>
             <li><a href='./pending.html'>Pending</a></li>
-            <li><a href='./completed.html'>Completed</a></li>
+            <li  class="active"><a href='#'>Completed</a></li>
         </ul>
     </div>
         <button id="clear-btn" class="clear-btn hide">Clear All</button>
@@ -33,8 +33,8 @@
           </svg>
     
 </div>
-<p class="indivHeaderControl">All Tasks</p>
-<ul class="task-box" id="task-box">
+<p class="indivHeaderControl">Completed Tasks</p>
+<ul class="task-box" id="task-box-completed">
 </ul>
 <p class="footer">&copy; Connor Christensen &dash; Todo App</p>
 </div>
