--- a/pending.html
+++ b/pending.html
@@ -21,8 +21,8 @@
     <div class="controls">
     <div class="categories">
         <ul>
-            <li class="active"><a href='#'>All</a></li>
-            <li><a href='./pending.html'>Pending</a></li>
+            <li><a href='./index.html'>All</a></li>
+            <li class="active"><a href='#'>Pending</a></li>
             <li><a href='./completed.html'>Completed</a></li>
         </ul>
     </div>
@@ -33,8 +33,8 @@
           </svg>
     
 </div>
-<p class="indivHeaderControl">All Tasks</p>
-<ul class="task-box" id="task-box">
+<p class="indivHeaderControl">Pending Tasks</p>
+<ul class="task-box" id="task-box-pending">
 </ul>
 <p class="footer">&copy; Connor Christensen &dash; Todo App</p>
 </div>
